# Draw-and-Guess

./: .env.example  .gitignore  CHAT_CHINESE_DISPLAY_FIX.md  CHAT_FIX_FINAL.md  CHINESE_ENCODING_FIX.md  DRAWER_ORDER_FEATURE.md  FINAL_CHAT_FIX.md  GETTING_STARTED.md  INIT_REPORT.md  MANIFEST.in  README.md  README_CHAT_FIX.md  RESIZE_FIX.md  STARTUP_SCRIPTS_README.md  SUCCESS_REPORT.md  TODO.md  VERIFICATION_REPORT.md  WORD_HIDDEN_FEATURE.md  WRAP_FIX.md  demo_chat.py  pyproject.toml  requirements.txt  settings.json  setup.py  start.bat  start.ps1  start.sh  start_cn.bat  start_fixed.bat  test_canvas_local.py  test_draw_sync.py
.github/workflows/: ci.yml  python-app.yml
assets/: README.md
data/: settings.json  words.txt
docs/: API.md  DEVELOPMENT.md
requirements/: dev.txt
server-deploy/: server.py
src/: __init__.py
src/client/: __init__.py  main.py  network.py
src/client/game/: __init__.py
src/client/ui/: __init__.py  button.py  buttons_config.py  canvas.py  chat.py  setting_components.py  text_input.py  toolbar.py
src/server/: __init__.py  main.py
src/server/game/: __init__.py  room.py
src/server/models/: __init__.py
src/server/network/: __init__.py
src/shared/: __init__.py  constants.py  protocols.py
test/: conftest.py
test/unit/: test_basic.py
test/unit/test_client/: test_client_basic.py
test/unit/test_server/: test_server_basic.py
test/unit/test_shared/: test_constants.py
